deploy-sample/nginx/06-deployment-sin-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  annotations:
    field.cattle.io/description: test deployment over rancher downstream cluster
  labels:
    app.kubernetes.io/name: inginx
    app: inginx  
  namespace: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app: nginx  
  replicas: 2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app: nginx  
      namespace: nginx
      annotations:
    spec:
      # to let access to vault secrets
      containers:
        - name: nginx
          imagePullPolicy: IfNotPresent
          image: nginx:latest
          securityContext:
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
              protocol: TCP
