deploy-sample/nginx/07-service-NO-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  annotations:
    field.cattle.io/description: 'service to test '
  labels:
    app.kubernetes.io/name: nginx
  namespace: nginx
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: nginx-svc
      port: 4000
      protocol: TCP
      targetPort: 80
  type: ClusterIP
