deploy-sample/nginx/10-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nginx-gw
  namespace: nginx
spec:
  selector:
    istio: ingress
    app: istio-ingress
  servers:
  - hosts:
    - nginx.inv.gov.ar
    port:
      number: 80
      name: http
      protocol: HTTP
